[gd_scene load_steps=17 format=3 uid="uid://bxoqjpdnluhdp"]

[ext_resource type="Script" path="res://scripts/bat.gd" id="1_k6dkv"]
[ext_resource type="Texture2D" uid="uid://chqhjyuci3fht" path="res://assets/sprites/enemies/32x32-bat-sprite.png" id="2_pufnf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jowpm"]
size = Vector2(34, 25)

[sub_resource type="Animation" id="Animation_5f7nr"]
resource_name = "flying"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aaqdk"]
_data = {
"flying": SubResource("Animation_5f7nr")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ehwib"]
atlas = ExtResource("2_pufnf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gixam"]
atlas = ExtResource("2_pufnf")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1ffo"]
atlas = ExtResource("2_pufnf")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbqdf"]
atlas = ExtResource("2_pufnf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xr5s"]
atlas = ExtResource("2_pufnf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqoen"]
atlas = ExtResource("2_pufnf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6cls"]
atlas = ExtResource("2_pufnf")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw8er"]
atlas = ExtResource("2_pufnf")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsmk7"]
atlas = ExtResource("2_pufnf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r2sg1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehwib")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gixam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1ffo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbqdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xr5s")
}],
"loop": true,
"name": &"dying",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqoen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6cls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw8er")
}],
"loop": true,
"name": &"flying",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsmk7")
}],
"loop": false,
"name": &"take damage",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0bbct"]

[node name="Bat" type="Area2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_k6dkv")

[node name="DamageBox" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_jowpm")

[node name="AttackCoolDown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aaqdk")
}
autoplay = "flying"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r2sg1")
animation = &"attack"
autoplay = "flying"

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_0bbct")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
